# ENPM808X-final-project-boilerplate

./: README.md  do-docs.bash  do-tests.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
src/docs/: index.md
src/my_controller/: CMakeLists.txt  README.md  package.xml
src/my_controller/.cache/clangd/index/: publisher_member_function.cpp.FAB7B3CDFC39D388.idx  subscriber_member_function.cpp.B5A716E610225EC6.idx
src/my_controller/launch/: run_demo.launch.py
src/my_controller/scripts/: generate_coverage_report.bash  run_me_for_fun.bash
src/my_controller/src/: my_dummy_lib_funct1.cpp  my_dummy_lib_funct2.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/my_controller/test/: basic_test.cpp
src/my_model/: CMakeLists.txt  README.md
src/my_model/.cache/clangd/index/: main.cpp.948BAB91EA75AE6E.idx  my_dummy_lib_funct1.cpp.AC20242A0B9DD75A.idx  my_dummy_lib_funct1.hpp.01C370628AC71672.idx  my_dummy_lib_funct2.cpp.E4F0AF5872F3E522.idx  my_dummy_lib_funct2.hpp.CE4674D60A3E1B5A.idx  test.cpp.91DF4A7E816E62D7.idx
src/my_model/cmake-modules/: CodeCoverage.cmake
src/my_model/include/: my_dummy_lib_funct1.hpp  my_dummy_lib_funct2.hpp
src/my_model/src/: my_dummy_lib_funct1.cpp
src/my_model/test/: CMakeLists.txt  main.cpp  test.cpp
